@@ -1,3 +1,10 @@
+SCIP next version
+==================
+
+fixed bugs:
+- fixed bug when adding linear constraints with non active variables in solving process, during propagation this
+  resulted in changing the row, which is not possible for unmodifiable constraints/locked rows
+
 SCIP version 3.0.0
 ==================
 
